kubernetes/chisel-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chisel-server
spec:
  type: NodePort
  selector:
    app: chisel-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
