kubernetes/socks5-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socks5-proxy
spec:
  selector:
    app: socks5-proxy
  ports:
    - protocol: TCP
      port: 1080
      targetPort: 1080
