kubernetes/xui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xui-service
spec:
  selector:
    app: xui
  ports:
    - protocol: TCP
      port: 2053
      targetPort: 2053
